examples-generated/namespaced/networkservices/v1beta1/gateway.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: networkservices.gcp.m.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: networkservices/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: default
  name: default
  namespace: upbound-system
spec:
  forProvider:
    ports:
    - 443
    scope: default-scope-basic
    type: OPEN_MESH
